--- a/main.tex
+++ b/main.tex
@@ -173,13 +173,70 @@
 \newpage
 
 % ----- Main Content Sections (Numbered) -----
-\section{บทนำ} 
-% KEEP CURRENT CONTENT - Already excellent
-% 1.1 ความเป็นมาและความสำคัญของปัญหา
-% 1.2 วัตถุประสงค์ของการศึกษา  
-% 1.3 ขอบเขตการศึกษา
-% 1.4 คำจำกัดความสำคัญ
-% 1.5 ประโยชน์ที่คาดว่าจะได้รับ
+\section{บทนำ}
+หุ่นยนต์อเนกประสงค์ (Polyfunctional Robots) หรือหุ่นยนต์อเนกฟังก์ชัน เป็นระบบหุ่นยนต์ขั้นสูงที่ออกแบบให้สามารถปฏิบัติภารกิจที่หลากหลายและซับซ้อนภายในระบบเดียว โดยไม่จำเป็นต้องมีการปรับเปลี่ยนฮาร์ดแวร์หลักอย่างมีนัยสำคัญ \parencite{liang2025decoding} ซึ่งแตกต่างจากหุ่นยนต์แบบดั้งเดิมที่มักออกแบบมาเพื่อปฏิบัติงานเฉพาะทางเพียงอย่างเดียว หุ่นยนต์อเนกประสงค์สามารถปรับเปลี่ยนฟังก์ชันการทำงานผ่านการปรับโครงสร้างทางกายภาพ (Physical Reconfiguration) การเขียนโปรแกรมควบคุมใหม่ (Software Reconfiguration) หรือการผสมผสานโมดูลต่างๆ เข้าด้วยกัน \parencite{post2023modular}
+
+ในยุคของการปฏิวัติอุตสาหกรรม 4.0 และการพัฒนาปัญญาประดิษฐ์ ความต้องการหุ่นยนต์ที่มีความยืดหยุ่นและสามารถปรับตัวได้กับสภาพแวดล้อมที่เปลี่ยนแปลงเพิ่มขึ้นอย่างรวดเร็ว \parencite{mohammadi2023mobile} หุ่นยนต์อเนกประสงค์จึงกลายเป็นทางเลือกที่มีความสำคัญสำหรับอุตสาหกรรมต่างๆ ตั้งแต่การผลิตและการประกอบชิ้นส่วน ไปจนถึงการแพทย์และการสำรวจอวกาศ เนื่องจากสามารถลดต้นทุนการลงทุนและเพิ่มประสิทธิภาพการใช้งานผ่านการใช้ระบบเดียวสำหรับหลายงาน
+
+แนวคิดของหุ่นยนต์อเนกประสงค์มีความเชื่อมโยงอย่างใกล้ชิดกับหุ่นยนต์โมดูลาร์ (Modular Robots) และหุ่นยนต์ที่ปรับโครงสร้างได้ด้วยตนเอง (Self-Reconfiguring Robots) \parencite{seo2019modular} อย่างไรก็ตาม หุ่นยนต์อเนกประสงค์มีจุดเน้นที่แตกต่างออกไป คือ การเน้นที่ความสามารถในการปฏิบัติงานหลากหลายประเภทมากกว่าการเปลี่ยนรูปร่างหรือโครงสร้าง ทำให้เหมาะสำหรับการประยุกต์ใช้ในสภาพแวดล้อมที่ต้องการความเชี่ยวชาญในหลายด้านพร้อมกัน
+
+\subsection{วัตถุประสงค์ของการศึกษา}
+
+การศึกษานี้มีวัตถุประสงค์หลักเพื่อวิเคราะห์และสังเคราะห์องค์ความรู้เกี่ยวกับหุ่นยนต์อเนกประสงค์ในมุมมองทางวิศวกรรม โดยมีจุดมุ่งหมายเฉพาะ ดังนี้
+
+\textbf{1. วิเคราะห์สถาปัตยกรรมและการออกแบบ} เพื่อศึกษาหลักการออกแบบสถาปัตยกรรมแบบโมดูลาร์ที่ปรับโครงสร้างได้ (Modular Reconfigurable Architecture) และระบบควบคุมแบบลำดับชั้น (Hierarchical Control Systems) ที่เป็นพื้นฐานสำคัญของหุ่นยนต์อเนกประสงค์ \parencite{tassi2024multimodal}
+
+\textbf{2. ศึกษาเทคโนโลยีหลัก} โดยเฉพาะการบูรณาการเซ็นเซอร์แบบหลายโหมด (Multimodal Sensor Integration) \parencite{yang2024body} แอคชูเอเตอร์ปรับความแข็งได้ (Variable Stiffness Actuators) และการประยุกต์ใช้ปัญญาประดิษฐ์แบบโมเดลพื้นฐาน (Foundation Models) ในการควบคุม
+
+\textbf{3. วิเคราะห์การประยุกต์ใช้} ในภาคอุตสาหกรรมสำคัญ รวมถึงการผลิตอัตโนมัติ การแพทย์ การสำรวจอวกาศ และการกู้ภัยพิบัติ พร้อมทั้งประเมินประสิทธิภาพและความคุ้มค่าทางเศรษฐศาสตร์
+
+\textbf{4. ระบุความท้าทายและข้อจำกัด} ทั้งในด้านเทคนิคและการนำไปใช้งานจริง รวมถึงประเด็นด้านความปลอดภัยและมาตรฐานสากล เช่น ISO 10218-1:2025 \parencite{iso2025robotics}
+
+\subsection{ขอบเขตการศึกษา}
+
+การศึกษานี้มุ่งเน้นหุ่นยนต์อเนกประสงค์ในบริบททางวิศวกรรม โดยครอบคลุมระบบที่มีความสามารถในการปฏิบัติงานหลากหลายผ่านกลไกต่างๆ ดังนี้
+
+\textbf{ขอบเขตด้านเทคนิค} การศึกษาครอบคลุมหุ่นยนต์ที่สามารถปรับเปลี่ยนฟังก์ชันผ่าน (1) การปรับโครงสร้างทางกายภาพแบบโมดูลาร์ (2) การเปลี่ยนแปลงอัลกอริทึมควบคุมและซอฟต์แวร์ และ (3) การผสมผสานโมดูลฮาร์ดแวร์ที่แตกต่างกัน
+
+\textbf{ขอบเขตด้านการประยุกต์ใช้} เน้นการใช้งานในสภาพแวดล้อมอุตสาหกรรมและการค้า รวมถึงการแพทย์ การสำรวจ และการบริการ โดยไม่รวมถึงหุ่นยนต์เฉพาะทางที่ไม่สามารถปรับเปลี่ยนฟังก์ชันได้
+
+\textbf{ขอบเขตด้านเวลา} การศึกษาเน้นงานวิจัยและพัฒนาตั้งแต่ปี ค.ศ. 2015 ถึงปัจจุบัน โดยเฉพาะอย่างยิ่งความก้าวหน้าในช่วง 5 ปีล่าสุดที่มีการประยุกต์ใช้ปัญญาประดิษฐ์และเทคโนโลยีการเรียนรู้ของเครื่อง
+
+\subsection{คำจำกัดความสำคัญ}
+
+เพื่อความชัดเจนในการศึกษา จึงกำหนดคำจำกัดความของแนวคิดสำคัญ ดังนี้
+
+\textbf{หุ่นยนต์อเนกประสงค์ (Polyfunctional Robots)} หมายถึง ระบบหุ่นยนต์ที่สามารถปฏิบัติงานที่หลากหลายและแตกต่างกันได้ภายในระบบเดียว โดยมีความสามารถในการปรับเปลี่ยนฟังก์ชันการทำงานตามความต้องการของงานแต่ละประเภท
+
+\textbf{หุ่นยนต์โมดูลาร์ (Modular Robots)} หมายถึง หุ่นยนต์ที่ประกอบด้วยโมดูลแยกส่วนที่สามารถเชื่อมต่อและแยกออกจากกันได้ เพื่อสร้างโครงสร้างและฟังก์ชันใหม่ตามต้องการ \parencite{bi2016survey}
+
+\textbf{หุ่นยนต์ปรับโครงสร้างได้ (Self-Reconfiguring Robots)} หมายถึง หุ่นยนต์ที่สามารถเปลี่ยนแปลงรูปร่างและโครงสร้างของตนเองได้โดยอัตโนมัติ เพื่อให้เหมาะสมกับงานหรือสภาพแวดล้อมที่แตกต่างกัน \parencite{hameed2017modular}
+
+\textbf{การควบคุมแบบลำดับชั้น (Hierarchical Control)} หมายถึง ระบบควบคุมที่จัดระดับการควบคุมเป็นชั้นๆ โดยชั้นบนมีหน้าที่วางแผนและตัดสินใจระดับสูง ส่วนชั้นล่างดำเนินการควบคุมรายละเอียดเฉพาะทาง
+
+\subsection{ระเบียบวิธีการศึกษา}
+
+การศึกษานี้ใช้วิธีการทบทวนวรรณกรรมเชิงพรรณนา (Descriptive Literature Review) ร่วมกับการวิเคราะห์เชิงเปรียบเทียบ โดยรวบรวมข้อมูลจากแหล่งข้อมูลทางวิชาการที่เชื่อถือได้ ประกอบด้วย
+
+\textbf{แหล่งข้อมูลหลัก} วารสารวิชาการระดับนานาชาติที่ผ่านการประเมินโดยผู้ทรงคุณวุฒิ (Peer-reviewed Journals) เช่น IEEE Transactions on Robotics, International Journal of Robotics Research, และ Journal of Intelligent \& Robotic Systems
+
+\textbf{แหล่งข้อมูลทุติยภูมิ} รายงานการประชุมวิชาการนานาชาติ (Conference Proceedings) มาตรฐานสากล และรายงานวิจัยจากสถาบันชั้นนำ เช่น NIST และ ISO
+
+\textbf{เกณฑ์การคัดเลือกข้อมูล} เน้นงานวิจัยที่ตีพิมพ์ในช่วงปี ค.ศ. 2015-2025 มีการอ้างอิงและความน่าเชื่อถือสูง และเกี่ยวข้องโดยตรงกับหุ่นยนต์อเนกประสงค์หรือแนวคิดที่เกี่ยวข้อง
+
+การวิเคราะห์ข้อมูลใช้การสังเคราะห์เชิงพรรณนา (Narrative Synthesis) โดยจัดกลุ่มข้อมูลตามประเด็นหลัก วิเคราะห์แนวโน้มและความสัมพันธ์ และสรุปเป็นองค์ความรู้ที่เป็นระบบ
+
+\subsection{ประโยชน์ที่คาดว่าจะได้รับ}
+
+การศึกษานี้คาดว่าจะให้ประโยชน์แก่ผู้เกี่ยวข้องหลายกลุ่ม ดังนี้
+
+\textbf{สำหรับนักวิจัยและนักวิชาการ} เป็นการสังเคราะห์องค์ความรู้ที่เป็นปัจจุบันและครอบคลุม สามารถใช้เป็นฐานข้อมูลสำหรับการวิจัยต่อยอดในอนาคต
+
+\textbf{สำหรับผู้ประกอบการและวิศวกร} ให้ข้อมูลสำคัญสำหรับการตัดสินใจลงทุนและการประยุกต์ใช้เทคโนโลยีหุ่นยนต์อเนกประสงค์ในภาคอุตสาหกรรม
+
+\textbf{สำหรับนักศึกษาและผู้ที่สนใจ} เป็นแหล่งข้อมูลการเรียนรู้ที่เป็นระบบเกี่ยวกับเทคโนโลยีหุ่นยนต์ขั้นสูงและแนวโน้มการพัฒนาในอนาคต
+
+\textbf{สำหรับหน่วยงานกำกับดูแล} ให้ข้อมูลประกอบการพิจารณาจัดทำนโยบายและมาตรฐานที่เกี่ยวข้องกับการใช้งานหุ่นยนต์อเนกประสงค์อย่างปลอดภัยและมีประสิทธิภาพ
 % 1.6 โครงสร้างของรายงาน [ADD NEW]
 
 \section{การทบทวนวรรณกรรมที่เกี่ยวข้อง} 
